# OS

./: CMakeLists.txt
cp/: CMakeLists.txt
cp/doc/: report.docx
cp/include/: note.h
cp/src/: A.cpp  B.cpp  C.cpp
kurs/: CMakeLists.txt  test.yaml
kurs/src/: job.cpp  job.h  manage_dag.cpp  test_job.cpp  yaml_parser.cpp  yaml_parser.h
lab1/doc/: report.docx
lab2/: Makefile  README.md
lab2/doc/: README.docx
lab2/include/: note.h
lab2/src/: child.cpp  main.cpp  parent.cpp
lab3/: CMakeLists.txt  README.md
lab3/doc/: README.docx
lab3/include/: main.h
lab3/src/: main.cpp
lab4/: CMakeLists.txt  README.md
lab4/doc/: report.docx
lab4/include/: main.h
lab4/src/: main.cpp
lab5/: CMakeLists.txt
lab5/doc/: README.md  report.docx
lab5/include/: lib.h
lab5/src/: lib1.c  lib2.c  main1.c  main2.c
lab6/: CMakeLists.txt
lab6/doc/: README.md  report.docx
lab6/include/: tree.h  zmq_manage.h
lab6/src/: api_daemon.cpp  client.cpp  server.cpp  tree.cpp  zmq_manage.cpp
